Crash when switching to video editing workspace in new scene #91694

Closed
opened 2021-09-25 00:01:41 +02:00 by Christoph Lendenfeld · 9 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.41

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-24 19:18, hash: a3027fb094
Worked: (2.93.0)
Caused by fa2c1698b0

Short description of error
When switching to a video editing workspace in a new scene, Blender crashes.

Exact steps for others to reproduce the error

  • create a new scene
    image.png

  • create a new workspace "Video editing"
    image.png

  • blender crashes
    No blend file. Just use the default startup file


or

  • Start Blender with the default Video Editing Workspace
  • Try to create a new scene with the New Command.
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.41 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-24 19:18, hash: `a3027fb094` Worked: (2.93.0) Caused by fa2c1698b0 **Short description of error** When switching to a video editing workspace in a new scene, Blender crashes. **Exact steps for others to reproduce the error** * create a new scene ![image.png](https://archive.blender.org/developer/F10577340/image.png) * create a new workspace "Video editing" ![image.png](https://archive.blender.org/developer/F10577342/image.png) * blender crashes No blend file. Just use the default startup file --- or - Start Blender with the default Video Editing Workspace - Try to create a new scene with the New Command.
Author
Member

Added subscriber: @ChrisLend

Added subscriber: @ChrisLend

#91701 was marked as duplicate of this issue

#91701 was marked as duplicate of this issue
Author
Member

here is the call stack

blender.exe!query_strips_at_frame(ListBase * seqbase, const int timeline_frame) Line 349 (c:\blender-git\blender\source\blender\sequencer\intern\iterator.c:349)
blender.exe!SEQ_query_rendered_strips(ListBase * seqbase, const int timeline_frame, const int displayed_channel) Line 445 (c:\blender-git\blender\source\blender\sequencer\intern\iterator.c:445)
blender.exe!sequencer_draw_preview(const bContext * C, Scene * scene, ARegion * region, SpaceSeq * sseq, int timeline_frame, int offset, bool draw_overlay, bool draw_backdrop) Line 2723 (c:\blender-git\blender\source\blender\editors\space_sequencer\sequencer_draw.c:2723)
blender.exe!sequencer_preview_region_draw(const bContext * C, ARegion * region) Line 790 (c:\blender-git\blender\source\blender\editors\space_sequencer\space_sequencer.c:790)
blender.exe!ED_region_do_draw(bContext * C, ARegion * region) Line 569 (c:\blender-git\blender\source\blender\editors\screen\area.c:569)
blender.exe!wm_draw_window_offscreen(bContext * C, wmWindow * win, bool stereo) Line 729 (c:\blender-git\blender\source\blender\windowmanager\intern\wm_draw.c:729)
blender.exe!wm_draw_window(bContext * C, wmWindow * win) Line 880 (c:\blender-git\blender\source\blender\windowmanager\intern\wm_draw.c:880)
blender.exe!wm_draw_update(bContext * C) Line 1079 (c:\blender-git\blender\source\blender\windowmanager\intern\wm_draw.c:1079)
blender.exe!WM_main(bContext * C) Line 654 (c:\blender-git\blender\source\blender\windowmanager\intern\wm.c:654)
blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 562 (c:\blender-git\blender\source\creator\creator.c:562)
blender.exe!invoke_main() Line 79 (d:\agent\_work\4\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:79)
blender.exe!__scrt_common_main_seh() Line 288 (d:\agent\_work\4\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288)
blender.exe!__scrt_common_main() Line 331 (d:\agent\_work\4\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:331)
blender.exe!mainCRTStartup(void * __formal) Line 17 (d:\agent\_work\4\s\src\vctools\crt\vcstartup\src\startup\exe_main.cpp:17)
kernel32.dll!00007ff839597034() (Unknown Source:0)
ntdll.dll!00007ff839802651() (Unknown Source:0)
here is the call stack ``` blender.exe!query_strips_at_frame(ListBase * seqbase, const int timeline_frame) Line 349 (c:\blender-git\blender\source\blender\sequencer\intern\iterator.c:349) blender.exe!SEQ_query_rendered_strips(ListBase * seqbase, const int timeline_frame, const int displayed_channel) Line 445 (c:\blender-git\blender\source\blender\sequencer\intern\iterator.c:445) blender.exe!sequencer_draw_preview(const bContext * C, Scene * scene, ARegion * region, SpaceSeq * sseq, int timeline_frame, int offset, bool draw_overlay, bool draw_backdrop) Line 2723 (c:\blender-git\blender\source\blender\editors\space_sequencer\sequencer_draw.c:2723) blender.exe!sequencer_preview_region_draw(const bContext * C, ARegion * region) Line 790 (c:\blender-git\blender\source\blender\editors\space_sequencer\space_sequencer.c:790) blender.exe!ED_region_do_draw(bContext * C, ARegion * region) Line 569 (c:\blender-git\blender\source\blender\editors\screen\area.c:569) blender.exe!wm_draw_window_offscreen(bContext * C, wmWindow * win, bool stereo) Line 729 (c:\blender-git\blender\source\blender\windowmanager\intern\wm_draw.c:729) blender.exe!wm_draw_window(bContext * C, wmWindow * win) Line 880 (c:\blender-git\blender\source\blender\windowmanager\intern\wm_draw.c:880) blender.exe!wm_draw_update(bContext * C) Line 1079 (c:\blender-git\blender\source\blender\windowmanager\intern\wm_draw.c:1079) blender.exe!WM_main(bContext * C) Line 654 (c:\blender-git\blender\source\blender\windowmanager\intern\wm.c:654) blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 562 (c:\blender-git\blender\source\creator\creator.c:562) blender.exe!invoke_main() Line 79 (d:\agent\_work\4\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:79) blender.exe!__scrt_common_main_seh() Line 288 (d:\agent\_work\4\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288) blender.exe!__scrt_common_main() Line 331 (d:\agent\_work\4\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:331) blender.exe!mainCRTStartup(void * __formal) Line 17 (d:\agent\_work\4\s\src\vctools\crt\vcstartup\src\startup\exe_main.cpp:17) kernel32.dll!00007ff839597034() (Unknown Source:0) ntdll.dll!00007ff839802651() (Unknown Source:0) ```
Member

Added subscribers: @HUSCH, @PratikPB2123

Added subscribers: @HUSCH, @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @iss

Added subscriber: @iss
Member

Caused by fa2c1698b0

cc @iss

Caused by fa2c1698b0 cc @iss

This issue was referenced by d2dda0e8b9

This issue was referenced by d2dda0e8b90208e1146a5e1317cc47f8f047dbbb

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2021-09-27 07:01:01 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91694
No description provided.