Fix T91694: VSE crashes when creating new scene

Crash happened due to NULL dereference. Add NULL checks.