source/blender/editors/transform/transform_convert_sequencer_image.c
@@ -113,12 +113,17 @@ static void freeSeqData(TransInfo *UNUSED(t),
 void createTransSeqImageData(TransInfo *t)
 {
   Editing *ed = SEQ_editing_get(t->scene);
+
+  if (ed == NULL) {
+    return;
+  }
+
   ListBase *seqbase = SEQ_active_seqbase_get(ed);
   SeqCollection *strips = SEQ_query_rendered_strips(seqbase, t->scene->r.cfra, 0);
   SEQ_filter_selected_strips(strips);
 
   const int count = SEQ_collection_len(strips);
-  if (ed == NULL || count == 0) {
+  if (count == 0) {
     SEQ_collection_free(strips);
     return;
   }
